test/static/bad/disallow_Error.mly
%token A
%token B
%token Error
%start<unit> main

%%

main: A B Error {}
