test/static/bad/disallow_Error.exp
File "disallow_Error.mly", line 3, characters 7-12:
Error: please do not name a terminal symbol Error.
